add pipeline spec