@@ -18,6 +18,7 @@ ext {
 repositories {
     if (no_nexus) {
         println("using repositories 'jcenter' and 'mavenCentral'")
+        mavenLocal()
         jcenter()
         mavenCentral()
         maven {
@@ -72,18 +73,18 @@ dependencies {
     implementation "fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.2"
     implementation "net.lingala.zip4j:zip4j:2.1.1"
     implementation "org.apache.ivy:ivy:2.2.0"
-    implementation "org.apache.pdfbox:pdfbox:2.0.17"
+    implementation "org.apache.pdfbox:pdfbox:2.0.23"
     implementation "org.apache.poi:poi:4.0.1"
     implementation "org.yaml:snakeyaml:1.24"
     implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
 
     testImplementation "org.spockframework:spock-core:1.3-groovy-2.4"
-    testImplementation "com.lesfurets:jenkins-pipeline-unit:1.3"
+    testImplementation "com.lesfurets:jenkins-pipeline-unit:1.9"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "org.objenesis:objenesis:3.1"
     testImplementation "cglib:cglib-nodep:3.3.0"                      // for mocking classes
     testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
-    testImplementation "com.github.tomakehurst:wiremock:2.26.0"       // for mocking HTTP server reponses
+    testImplementation "com.github.tomakehurst:wiremock-jre8:2.28.0" // for mocking HTTP server reponses
     testImplementation "org.hamcrest:hamcrest:2.1"
 }
 
@@ -112,6 +113,12 @@ test {
     testLogging {
         showStandardStreams = true
     }
+    maxHeapSize = "2048m"
+    jvmArgs "-XX:MaxPermSize=256m"
+    systemProperty "testRecordMode", project.findProperty('testRecordMode')?: false
+    systemProperty "jiraURL", project.findProperty('jiraURL')?: "http://jira.odsbox.lan:8080"
+    systemProperty "jiraUser", project.findProperty('jiraUser')?: "openshift"
+    systemProperty "jiraPassword", project.findProperty('jiraPassword')?: "openshift"
 }
 
 codenarc {
